--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Showcasing inclusive microlearning courses applying Universal Design for Learning principles." />
     <meta name="keywords" content="Universal Design for Learning, UDL, microlearning, instructional design, accessibility, inclusive education" />
     <meta name="author" content="Kate Hansen" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
   </head>
   <body>
     <div id="root"></div>
